--- a/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/mod_system_gungnir.ltx
+++ b/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/mod_system_gungnir.ltx
@@ -509,7 +509,7 @@ hud					= wpn_gungnir_pn23_hud
 inv_weight                                         = 4.250
 
 scope_status                                       = 1
-scope_zoom_factor                                  = 30
+scope_zoom_factor                                  = 20
 zoom_rotate_time                                   = 0.25
 scope_dynamic_zoom                       = on
 
@@ -571,6 +571,7 @@ item_visual				= anomaly_weapons\wpn_gungnir\wpn_gungnir_trijicon_rmr_hud.ogf
 ;------------------------------------------------------------------------------------------------
 [wpn_gungnir_specter]:wpn_gungnir 
 hud					= wpn_gungnir_specter_hud
+zoom_step_count = 1
 
 1icon_layer                              = specter
 1icon_layer_x                            = 72
@@ -600,8 +601,8 @@ item_visual				= anomaly_weapons\wpn_gungnir\wpn_gungnir_specter_hud.ogf
 
 ;--------------------------------------------------------------------------------
 [wpn_gungnir_spec_alt]:wpn_gungnir
-
 hud					= wpn_gungnir_spec_alt_hud
+zoom_step_count = 1
 
 1icon_layer                              = specter
 1icon_layer_x                            = 72
@@ -638,7 +639,7 @@ hud					= wpn_gungnir_leupold_hud
 
 1icon_layer                              = leupold
 1icon_layer_x			= 85
-1icon_layer_y			= 1
+1icon_layer_y			= 0
 
 inv_weight                                         = 4.280
 scope_status                                       = 1
@@ -650,10 +651,10 @@ scope_dynamic_zoom                                 = on
 
 item_visual				= anomaly_weapons\wpn_gungnir\wpn_gungnir_leupold_hud.ogf
 
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061558
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061558
-        aim_hud_offset_rot               = 0.00529, -0.003729, 0
-        aim_hud_offset_rot_16x9          = 0.00529, -0.003729, 0
+        aim_hud_offset_pos               = -0.061243, 0.009842, -0.060712
+        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.060712
+        aim_hud_offset_rot               = 0.004365, -0.003634, 0
+        aim_hud_offset_rot_16x9          = 0.004365, -0.003634, 0
 
 ;------------------------------------------------------------------------------------------------
 [wpn_gungnir_mark8_rmr]:wpn_gungnir
@@ -661,7 +662,7 @@ hud					= wpn_gungnir_mark8_rmr_hud
 
 1icon_layer                              = leupold
 1icon_layer_x			= 85
-1icon_layer_y			= 1
+1icon_layer_y			= 0
 
 inv_weight                                         = 4.455
 
@@ -676,10 +677,10 @@ use_alt_aim_hud                   = true
 
 item_visual				= anomaly_weapons\wpn_gungnir\wpn_gungnir_mark8_rmr_hud.ogf
 
-        aim_hud_offset_pos               = -0.061243, 0.009842, -0.061558
-        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.061558
-        aim_hud_offset_rot               = 0.00529, -0.003729, 0
-        aim_hud_offset_rot_16x9          = 0.00529, -0.003729, 0
+        aim_hud_offset_pos               = -0.061243, 0.009842, -0.060712
+        aim_hud_offset_pos_16x9          = -0.061243, 0.009842, -0.060712
+        aim_hud_offset_rot               = 0.004365, -0.003634, 0
+        aim_hud_offset_rot_16x9          = 0.004365, -0.003634, 0
 		
         aim_hud_offset_alt_pos           = -0.080862, -0.050206, -0.052342
         aim_hud_offset_alt_pos_16x9      = -0.080862, -0.050206, -0.052342
@@ -710,10 +711,11 @@ item_visual                              = anomaly_weapons\wpn_gungnir\wpn_gungn
 ;------------------------------------------------------------------------------------------------
 [wpn_gungnir_ps320]:wpn_gungnir
 hud                                      = wpn_gungnir_ps320_hud
+zoom_step_count = 1
 
 1icon_layer                              = ps320
-1icon_layer_x			= 72
-1icon_layer_y			= -12
+1icon_layer_x			= 68
+1icon_layer_y			= -4
 
 inv_weight                               = 4.45
 
