--- a/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/magazines/weapons/w_gungnir.ltx
+++ b/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/magazines/weapons/w_gungnir.ltx
@@ -1,5 +1,5 @@
 [wpn_gungnir]
-default_mag = mag_m98b_300_default
+default_mag = mag_mjolnir_big
 ;base_type
-ammo_magnum_300 = m98_300
+ammo_magnum_300 = mjolnir_338
 
