--- a/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/items/settings/npc_loadouts/mod_npc_loadouts_gungnir.ltx
+++ b/MK18 Gungnir Heavy Assault Rifle/gamedata/configs/items/settings/npc_loadouts/mod_npc_loadouts_gungnir.ltx
@@ -1,30 +1,30 @@
 ;====
 
 ![army_master_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:5
 
 ;====
 ![freedom_master_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:5
 
 
 ;====
 ![isg_veteran_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:10
 
 ![isg_master_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:15
 
 ;====
 ![killer_master_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:5
 
 ;====
 
 ![monolith_master_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:10
 
 ![monolith_legend_primary]
-wpn_gungnir:r:r
+wpn_gungnir:r:r:15
 
 ;====
